--- a/training.ipynb
+++ b/training.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Training\n",
+    "## Training\n",
     "This notebook contains the code for the Exploratory Data Analysis, Data preprocessing, defining the model architecture and the training of the model "
    ]
   },
@@ -252,8 +252,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The Dataset\n",
-    "Creating the dataset and iterators to loop throught the dataset, and testing them"
+    "### Dataset and Dataloaders\n",
+    "Creating the dataset and iterators to loop throught the dataset, and testing them.\n",
+    "Applying transforms to images."
    ]
   },
   {
@@ -263,7 +264,7 @@
    "outputs": [],
    "source": [
     "'''\n",
-    "Creating a class that will take in the train/test filenames dataframe\n",
+    "Creating a class that will take in the train/val filenames dataframe\n",
     "as input and import and store images as a tuple: (image tensor, integer label)\n",
     "\n",
     "'''\n",
@@ -276,7 +277,7 @@
     "    def __len__(self):\n",
     "        return len(self.img_df)\n",
     "\n",
-    "    def __getitem__(self, idx):\n",
+    "    def __getitem__(self, idx):  ## opens the image from the filnames\n",
     "        img_path = self.img_df.iloc[idx, 0]\n",
     "        label = self.img_df.iloc[idx, 1]\n",
     "\n",
@@ -298,7 +299,7 @@
     "# Define transformation for images\n",
     "IMAGE_SIZE = (200, 200)\n",
     "data_transform = transforms.Compose([\n",
-    "    transforms.Resize(IMAGE_SIZE),\n",
+    "    transforms.Resize(IMAGE_SIZE), \n",
     "    transforms.RandomHorizontalFlip(p=0.6),\n",
     "    transforms.RandomVerticalFlip(p=0.6),\n",
     "    transforms.ToTensor(),\n",
@@ -528,10 +529,9 @@
    ],
    "source": [
     "## Print the summary for one iteration of forward pass, with a batch size of 16\n",
-    "\n",
     "IMAGE_WIDTH = IMAGE_SIZE[0]\n",
     "IMAGE_HEIGHT = IMAGE_SIZE[1]\n",
-    "# Install torchinfo if it's not available, import it if it is\n",
+    "\n",
     "import torchinfo\n",
     "from torchinfo import summary\n",
     "# do a test pass through of an example input size\n",
